opam-version: "2.0"
version: "master"
maintainer: "Ivan Gotovchits <ivg@ieee.org>"
authors: "BAP Team"
homepage: "https://github.com/BinaryAnalysisPlatform/core-lwt/"
bug-reports: "https://github.com/BinaryAnalysisPlatform/core-lwt/issues"
dev-repo: "git://github.com/BinaryAnalysisPlatform/core-lwt/"
license: "MIT"
build: ["dune" "build" "-p" name "-j" jobs]

depends: [
    "ocaml" {>= "4.04.1"}
    "dune" {build & >= "1.11.0"}
    "base-unix"
    "base-threads"
    "core_kernel" {>= "v0.11" & < "v0.12"}
    "lwt" { >= "4.0.0" & < "5.0.0"}
    "stdlib-shims"
]
synopsis: "Lwt library wrapper in the Janestreet core style"
description: """
Provides an interface to Lwt library that follows the Janestreet
coding standards."""
